@@ -115,23 +115,6 @@ sec_zero_p (const mp_limb_t *ap, mp_size_t n)
 
 /* Additional convenience functions. */
 
-int
-mpz_limbs_cmp (mpz_srcptr a, const mp_limb_t *bp, mp_size_t bn)
-{
-  mp_size_t an = mpz_size (a);
-  assert (mpz_sgn (a) >= 0);
-  assert (bn >= 0);
-
-  if (an < bn)
-    return -1;
-  if (an > bn)
-    return 1;
-  if (an == 0)
-    return 0;
-
-  return mpn_cmp (mpz_limbs_read(a), bp, an);
-}
-
 /* Get a pointer to an n limb area, for read-only operation. n must be
    greater or equal to the current size, and the mpz is zero-padded if
    needed. */
