@@ -35,7 +35,6 @@
 
 #include "bignum.h"
 
-#define mpz_limbs_cmp _nettle_mpz_limbs_cmp
 #define mpz_limbs_read_n _nettle_mpz_limbs_read_n
 #define mpz_limbs_copy _nettle_mpz_limbs_copy
 #define mpz_set_n _nettle_mpz_set_n
@@ -78,8 +77,6 @@ sec_zero_p (const mp_limb_t *ap, mp_size_t n);
   (((n) * 8 + GMP_NUMB_BITS - 1) / GMP_NUMB_BITS)
 
 /* Convenience functions */
-int
-mpz_limbs_cmp (mpz_srcptr a, const mp_limb_t *bp, mp_size_t bn);
 
 /* Get a pointer to an n limb area, for read-only operation. n must be
    greater or equal to the current size, and the mpz is zero-padded if
