@@ -1,3 +1,8 @@
+2021-11-19  Niels Möller  <nisse@lysator.liu.se>
+
+	* gmp-glue.c (mpz_limbs_cmp): Deleted function. Usage replaced
+	with mpz_roinit_n and mpz_cmp.
+
 2021-11-15  Niels Möller  <nisse@lysator.liu.se>
 
 	* testsuite/eddsa-compress-test.c (test_main): Use test_randomize.
